plugin/testData/annotator/perl/unreachableCode/nestedSubExpr.code
sub test {
    'first';
    sub {
        'subfirst';
        return;
        '<error descr="Unreachable code">subsecond</error>';
    };
    return;
    '<error descr="Unreachable code">second</error>';
}
